# playground-cli

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  cdm.json  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.changeset/: add-e2e-tests.md  always-install-before-build.md  apache-license.md  bulletin-deploy-0.7.6.md  bump-bulletin-deploy-0-6-16.md  bump-bulletin-deploy-0-7-0.md  bump-bulletin-deploy-0-7-2.md  bump-bulletin-deploy-0.6.9.md  bump-bulletin-deploy-0729.md  bump-bulletin-deploy.md  bump-chain-client-2-0-5.md  calm-lamps-smile.md  calm-modable-origin.md  cdm-parity-migration.md  cdm-registry-migration.md  cdm-registry-v3-sync.md  ci-inline-failure-details.md  clean-install-next-step.md  clean-ubuntu-git-ordering.md  cli-telemetry.md  contracts-in-deploy.md  decentralize-interactive.md  dedicated-funder-fallback.md  deploy-and-build.md  deploy-domain-help-and-dep-upgrades.md  deploy-manifest-output.md  deploy-prompt-help-boxes.md  deploy-session-persistence.md  deploy-skip-build.md  dev-signer-no-phone-taps.md  docs-e2e-running.md  dot-init-identity-display.md  dot-logout-command.md  dotns-rules-and-bulletin-deploy-090.md  e2e-phase-4-matrix-split.md  e2e-phase-5a-nightly-framework.md  e2e-phase-5b-hardhat.md  e2e-phase-5c-multi-contract.md  e2e-phase-5d-rejections.md  e2e-phase-6-rpc-failover.md  (+61 more)
.github/workflows/: ci.yml  dev-release.yml  e2e-cleanup.yml  e2e-post-release.yml  e2e-release.yml  e2e.yml  funder-balance-check.yml  license.yml  release-contract-manifest.yml  release.yml
docs/: e2e-bootstrap.md  e2e-running-tests.md
e2e/: .gitignore  vitest.config.ts
e2e/cli/: build.test.ts  chaos.test.ts  deploy.test.ts  diagnostic.test.ts  init.test.ts  install.test.ts  mod.test.ts  published.test.ts  session.test.ts
e2e/cli/fixtures/projects/rust-cdm/: .gitignore  Cargo.toml  package.json
e2e/cli/fixtures/projects/rust-cdm/.cargo/: config.toml
e2e/cli/fixtures/projects/rust-cdm/contracts/counter/: Cargo.toml  README.md  lib.rs
e2e/cli/fixtures/projects/rust-cdm/contracts/counter-reader/: Cargo.toml  README.md  lib.rs
e2e/cli/fixtures/projects/rust-cdm/contracts/counter-writer/: Cargo.toml  README.md  lib.rs
patches/: @novasamatech__host-papp@0.8.5.patch  @novasamatech__sdk-statement@0.6.0.patch  @novasamatech__statement-store@0.8.6.patch  @parity__product-sdk-terminal.patch
scripts/: check-funder-balance.ts  check-license-headers.sh  patch-wasm.sh  release.sh
sentry/: README.md  backup-dashboards.sh  create-dashboard.py  patch-dashboard.py
sentry/dashboards/: 2143100.json  2216067.json  2216096.json
sentry/payloads/: dashboard1-descriptions.json  dashboard1-fixes.json  dashboard2-create.json  dashboard3-create.json
src/: bootstrap.test.ts  bootstrap.ts  cli-runtime.test.ts  cli-runtime.ts  config.test.ts  config.ts  dotns-cli-dispatch.ts  index.test.ts  index.ts  telemetry-config.test.ts  telemetry-config.ts  telemetry.test.ts  telemetry.ts
src/commands/: build.ts  contract.test.ts  contract.ts  (+9 more)
tmp/: cdm-artifact-api-request.md
tools/: diagnose-mapping.ts  e2e-local.sh  list-registry-apps.ts  probe-registry-resolution.ts  register-e2e-fixtures.ts  register-mod-fixture.ts
(+208 files in other folders)
