[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["CDM Example"]
homepage = "https://polkadot.com/"
edition = "2024"

[workspace.dependencies]
# Pinned by commit (not branch) so this fixture builds reproducibly. The revs
# match what Cargo.lock already resolved; bump deliberately if the fixture needs
# a newer CDM toolchain.
cdm = { git = "https://github.com/paritytech/contract-dependency-manager", rev = "4b7410fa681441da25f3620fef01cadb2258ec59" }
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", rev = "917a573ea9bf919e107290fd047827cf604049ff" }
polkavm-derive = "0.31"
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
picoalloc = "5.2"
