[package]
name = "counter_reader"
version.workspace = true
edition.workspace = true
description = "Reads the current count from the shared counter contract via cross-contract CDM reference"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "counter_reader"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
counter = { path = "../counter" }
